--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- vibrant starts -->
         <div class="container2">
             <div class="Dimage">
-                <img id="dashBoard" src="./images/Vibrant-Portraits-Of-Animals-And-dog.jpg" alt="">
+                <img id="dashBoard" src="https://www.web-soluces.net/outils-gratuits/services%20gratuits/free%20template/pgm/KirazFatma-Blog/img/photo-sect-2.png" alt="">
             </div>
            <div class="DD">
             <p ><strong>Vibrant Portraits of 2020</strong></p>
@@ -80,7 +80,7 @@
         <!-- malayalam type starts  -->
         <div class="container2">
             <div class="Dimage">
-                <img id="dashBoard" src="./images/malayalam.webp" alt="">
+                <img id="dashBoard" src="https://www.web-soluces.net/outils-gratuits/services%20gratuits/free%20template/pgm/KirazFatma-Blog/img/photo-sect-2.png" alt="">
             </div>
            <div class="DD">
             <p ><strong>36 Days of Malayalam type</strong></p>
