--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <!-- dashboard starts -->
             <div class="container2">
                 <div class="Dimage">
-                    <img id="dashBoard" src="./images/design dashboard.webp" alt="">
+                    <img id="dashBoard" src="https://th.bing.com/th/id/OIP.rxkq_V-dUmod6dvcpFGtVgHaEC?w=271&h=180&c=7&r=0&o=5&pid=1.7" alt="dashboard">
+
                 </div>
                <div class="DD">
                 <p ><strong>Designing Dashboards</strong></p>
@@ -67,7 +68,8 @@
         <!-- vibrant starts -->
         <div class="container2">
             <div class="Dimage">
-                <img id="dashBoard" src="https://www.web-soluces.net/outils-gratuits/services%20gratuits/free%20template/pgm/KirazFatma-Blog/img/photo-sect-2.png" alt="">
+                <img id="dashBoard" src="https://e0.pxfuel.com/wallpapers/934/912/desktop-wallpaper-red-beauty-bright-red-butterflies-vibrant-vivid-bold-girl.jpg" alt="Vibrant">
+
             </div>
            <div class="DD">
             <p ><strong>Vibrant Portraits of 2020</strong></p>
