--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, in similique id necessitatibus odit aspernatur maiores minus. Eum labore quidem delectus dolorum ducimus! Repudiandae praesentium placeat dicta numquam sit excepturi.</p>
                 </div>
                 <div class="pic">
-                    <img id="image" src="./images/download.jpg" alt="">
+                    <img id="image" src="https://tse1.mm.bing.net/th?id=OIP.xQ8lnQVUBRzHTtPlHZOYCQHaKf&pid=Api&rs=1&c=1&qlt=95&w=85&h=120" alt="pic">
                 </div>
             </div>
             <div><button>Download Resume</button></div>
