--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
             <!-- dashboard starts -->
             <div class="container2">
                 <div class="Dimage">
-                    <img id="dashBoard" src="./images/design dashboard.webp" alt="">
+                    <img id="dashBoard" src="https://th.bing.com/th/id/OIP.rxkq_V-dUmod6dvcpFGtVgHaEC?w=271&h=180&c=7&r=0&o=5&pid=1.7" alt="">
                 </div>
                <div class="DD">
                 <p ><strong>Designing Dashboards</strong></p>
@@ -36,7 +36,7 @@
         <!-- vibrant starts -->
           <div class="container2">
             <div class="Dimage">
-                <img id="dashBoard" src="./images/Vibrant-Portraits-Of-Animals-And-dog.jpg" alt="">
+                <img id="dashBoard" src="https://e0.pxfuel.com/wallpapers/934/912/desktop-wallpaper-red-beauty-bright-red-butterflies-vibrant-vivid-bold-girl.jpg" alt="">
             </div>
            <div class="DD">
             <p ><strong>Vibrant Portraits of 2020</strong></p>
@@ -49,7 +49,7 @@
         <!-- malayalam type starts  -->
         <div class="container2">
             <div class="Dimage">
-                <img id="dashBoard" src="./images/malayalam.webp" alt="">
+                <img id="dashBoard" src="https://www.web-soluces.net/outils-gratuits/services%20gratuits/free%20template/pgm/KirazFatma-Blog/img/photo-sect-2.png" alt="">
             </div>
            <div class="DD">
             <p ><strong>36 Days of Malayalam type</strong></p>
