--- a/blog.html
+++ b/blog.html
@@ -58,5 +58,5 @@
     </div>
     <script src="https://kit.fontawesome.com/62bf79d6f8.js" crossorigin="anonymous"></script>
 </body>
-<script src="./scripts/portfolio.js"></script
+<script src="./portfolio.js"></script
 </html>
